Bug 253858 - Systemtray popup menu application menu appears on the wrong place
Summary: Systemtray popup menu application menu appears on the wrong place
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-systemtray (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-11 17:49 UTC by Jan Molnar
Modified: 2011-04-20 22:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The wrong place where the menu appears. (30.12 KB, image/png)
2010-10-11 17:49 UTC, Jan Molnar
Details
The right place where the menu appears when the systray menu is visible (the same place). (44.44 KB, image/png)
2010-10-11 17:51 UTC, Jan Molnar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Molnar 2010-10-11 17:49:44 UTC
Created attachment 52418 [details]
The wrong place where the menu appears.

Version:           unspecified (using KDE 4.5.2) 
OS:                Linux

In systemtray popup menu, if you invoke an "always hidden" application from currently hidden menu (by a shortcut), it appears in the middle of the screen, instead of nearby systemtray (in_the_middle_of_nothing.png). The problem is, application does not know (at least it does not behave that) that the popup menu is currently hidden and it appears on the place it would appear if the menu would be visible (on_the_right_place.png).

Reproducible: Always

Steps to Reproduce:
Set an application in systemtray to be always hidden, set a shortcut to it (or use a predefined one), press that shortcut and see where the application menu appears.

Actual Results:  
Application menu appears on the place it would appear if the systemtray menu would be visible.

Expected Results:  
Application menu should appear nearby systray (because the hidden systray menu is there).
Comment 1 Jan Molnar 2010-10-11 17:51:57 UTC
Created attachment 52419 [details]
The right place where the menu appears when the systray menu is visible (the same place).
Comment 2 Alexey Shildyakov 2011-02-04 12:35:14 UTC
This is may duplicate or related to bug 247558
Comment 3 Marco Martin 2011-04-20 18:15:46 UTC
Git commit cfe34fcf05d0c007a8d2d7087bf368d46cd31a03 by Marco Martin.
Committed on 20/04/2011 at 18:10.
Pushed by mart into branch 'master'.

fix popup position

if item is in an hidden Dialog, try to find the parent applet and use it instead of item
this fixes the device notifier popup placement
BUG:234564
BUG:253858

M  +4    -0    plasma/corona.cpp     

http://commits.kde.org/kdelibs/cfe34fcf05d0c007a8d2d7087bf368d46cd31a03
Comment 4 Marco Martin 2011-04-20 18:15:46 UTC
Git commit bb5e7a3d6e32d5435bfba79a03614396e17c3650 by Marco Martin.
Committed on 20/04/2011 at 18:07.
Pushed by mart into branch 'master'.

popup in the correct place when viewFor is hidden

when item is in an hidden Dialog, try to find the parent applet and position the popup there.
this fixes the devicenotifier popup placement
BUG:253858
BUG:234564

M  +32   -12   plasma/corona.cpp     

http://commits.kde.org/kdelibs/bb5e7a3d6e32d5435bfba79a03614396e17c3650
Comment 5 Jan Molnar 2011-04-20 22:05:03 UTC
(In reply to comment #4)
> this fixes the devicenotifier popup placement

Thank you very much! I do not compile KDE directly from GIT, I cannot confirm the solution yet, but I will let you know when it is fixed in my distribution. Have a nice day! :)