popup in the correct place when viewFor is hidden

when item is in an hidden Dialog, try to find the parent applet and position the popup there.
this fixes the devicenotifier popup placement
BUG:253858
BUG:234564